# SurveySystem

./: README.md
.github/workflows/: docker-image.yml  main.yml  pytest.yml
python-flask-restapi/: Dockerfile  app.py  app_service.py  db.py  dbMongo.py  dbMongo_test.py  docker-compose.yml  kafka_utils.py  pyproject.toml  redisCache.py  requirements.txt  surveyService.py  testsMongo.py
python-flask-restapi/database/: 00-init.sql  01-DatosPrueba.sql  01-tasks.sql
python-flask-restapi/mongo-init-scripts/: init-mongo.js
python-flask-restapi/python-flask-restapi/: Dockerfile  app.py  appMongo.py  app_service.py  db.py  dbMongo.py  docker-compose.yml  requirements.txt  test_mongo.ipynb
python-flask-restapi/streamlit/: Dockerfile  SurveyAnalytics.py  requirements.txt
python-flask-restapi/tests/: pyproject.toml  surveyService.py  survey_test.py  test_dbMongo.py
