[tool.poetry]
name = "tests"
version = "0.1.0"
description = "Tests for survey_system project"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.2.1"
psycopg2 = "^2.9.1"
# Otras dependencias necesarias para tus pruebas, como mock o pytest-mock
